Bug fix: note content wrapping repaired

--- a/src/components/NoteList/NoteItem.module.css
+++ b/src/components/NoteList/NoteItem.module.css
@@ -26,6 +26,8 @@
 
 .content {
   text-align: justify;
+  overflow: hidden;
+  overflow-wrap: break-word;
 }
 
 .svg-icon {
