--- a/src/components/NoteList/NoteList.module.css
+++ b/src/components/NoteList/NoteList.module.css
@@ -7,3 +7,9 @@
   height: 90%;
   overflow: auto;
 }
+
+.alt-message {
+  margin: auto;
+  color: white;
+  font-size: 1.5rem;
+}
